--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,6 @@
       "Microsoft" : "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "TokenKey" : "Mykeywas@superPassword!"
 }
